Added more methods, still need refactoring

--- a/Quiz/Quiz 1/q1pr2AC.ipynb
+++ b/Quiz/Quiz 1/q1pr2AC.ipynb
@@ -143,7 +143,7 @@
     "    # Iterate for N times                                                                                                                                                                          \n",
     "    for i in range(N):\n",
     "        x = (b - dot(R,x)) / D\n",
-    "    return x"
+    "    return x\n"
    ]
   },
   {
